# python-project-lvl2

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: сheck_python_file.yml
gendiff/: dict_build.py  diff_with_formatter.py  get_data_from_file.py
gendiff/formaters/: __init__.py  diff.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
test_coverage/: main.py
tests/: test_generate_diff.py
