[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Dima343316 <mitya.volkov.2021@mail.ru>"]
packages = [
    { include = "gendiff" },
]
[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^5.0.4"






[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"


[tool.poetry.urls]
"gendiff" = "https://github.com/Dima343316/python-project-lvl2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
